Fix footer spacings

--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -191,6 +191,10 @@
   margin-bottom: auto;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 
 
 
